online-shopapp/online_shopping_app/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: online-shop-deployment
  namespace: online-shop
  labels:
    app: online-shop

spec:
  replicas: 3
  selector:
    matchLabels:
      app: online-shop

  template:
    metadata:
      name: online-shop-pod
      namespace: online-shop
      labels:
        app: online-shop
    spec:
      containers:
      - name: online-shop-container
        image: meghrajfand8788/nginx:latest
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 256Mi

          limits:
            cpu: 150m
            memory: 300Mi
