online-shopapp/online_shopping_app/k8s/service.yml
kind: Service
apiVersion: v1

metadata:
  name: online-app-svc
  namespace: online-shop

spec:
  selector:
    app: online-shop

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
