online-shopapp/online_shopping_app/k8s/ingress.yml
apiVersion : networking.k8s.io/v1
kind: Ingress

metadata:
  name: online-shop-ingress
  namespace: online-shop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /shop
        backend:
          service:
            name: online-app-svc
            port:
              number: 80
